# kyc_automation

./: .gitignore  README.md  prd.md  pyproject.toml  tasks.md
.github/ISSUE_TEMPLATE/: feature_request.md
kyc_auto/: __init__.py
